--- a/manifest.json
+++ b/manifest.json
@@ -231,34 +231,6 @@
         "Built": "R 4.1.2; ; 2021-11-11 16:09:52 UTC; unix"
       }
     },
-    "checkr": {
-      "Source": "CRAN",
-      "Repository": "https://cran.rstudio.com/",
-      "description": {
-        "Package": "checkr",
-        "Title": "Check the Properties of Common R Objects",
-        "Version": "0.5.0",
-        "Authors@R": "\n  person(\"Joe\", \"Thorley\", email = \"joe@poissonconsulting.ca\", role = c(\"aut\", \"cre\"), comment = c(ORCID = \"0000-0002-7683-4592\"))",
-        "Description": "Expressive, assertive, pipe-friendly functions \n  to check the properties of common R objects.\n  In the case of failure the functions issue informative error messages.",
-        "License": "MIT + file LICENSE",
-        "Imports": "err",
-        "Suggests": "assertthat, checkmate, covr, datasets, magrittr, hms, dplyr,\nunits, testthat, knitr, rmarkdown",
-        "URL": "https://github.com/poissonconsulting/checkr",
-        "BugReports": "https://github.com/poissonconsulting/checkr/issues",
-        "Encoding": "UTF-8",
-        "LazyData": "true",
-        "RoxygenNote": "6.1.1",
-        "VignetteBuilder": "knitr",
-        "Language": "en-CA",
-        "NeedsCompilation": "no",
-        "Packaged": "2019-04-24 20:31:04 UTC; joe",
-        "Author": "Joe Thorley [aut, cre] (<https://orcid.org/0000-0002-7683-4592>)",
-        "Maintainer": "Joe Thorley <joe@poissonconsulting.ca>",
-        "Repository": "CRAN",
-        "Date/Publication": "2019-04-25 01:10:07 UTC",
-        "Built": "R 4.1.2; ; 2021-11-11 16:09:09 UTC; unix"
-      }
-    },
     "cli": {
       "Source": "CRAN",
       "Repository": "https://cran.rstudio.com/",
@@ -590,31 +562,6 @@
         "Repository": "CRAN",
         "Date/Publication": "2021-04-29 12:40:02 UTC",
         "Built": "R 4.1.2; x86_64-pc-linux-gnu; 2021-11-04 19:35:11 UTC; unix"
-      }
-    },
-    "err": {
-      "Source": "CRAN",
-      "Repository": "https://cran.rstudio.com/",
-      "description": {
-        "Package": "err",
-        "Title": "Customizable Object Sensitive Messages",
-        "Version": "0.2.0",
-        "Authors@R": "c(\n    person(\"Joe\", \"Thorley\", email = \"joe@poissonconsulting.ca\", role = c(\"aut\", \"cre\"), comment = c(ORCID = \"0000-0002-7683-4592\")),\n    person(\"James\", \"Dunham\", email = \"james@jamesdunham.io\", role = \"aut\"))",
-        "Description": "Messages should provide users with readable information \n    about R objects without flooding their console. \n    'cc()' concatenates vector and data frame values \n    into a grammatically correct string using commas, an ellipsis and conjunction. \n    'cn()' allows the user to define a string which varies based on a count.\n    'co()' combines the two to produce a customizable object aware string.\n    The package further facilitates this process by providing five 'sprintf'-like \n    types such as '%n' for the length of an object and '%o' for its name as\n    well as wrappers for pasting objects and issuing errors, warnings and messages.",
-        "License": "MIT + file LICENSE",
-        "Suggests": "testthat, covr",
-        "URL": "https://github.com/poissonconsulting/err",
-        "BugReports": "https://github.com/poissonconsulting/err/issues",
-        "Encoding": "UTF-8",
-        "LazyData": "true",
-        "RoxygenNote": "6.1.1",
-        "NeedsCompilation": "no",
-        "Packaged": "2019-04-25 20:26:21 UTC; joe",
-        "Author": "Joe Thorley [aut, cre] (<https://orcid.org/0000-0002-7683-4592>),\n  James Dunham [aut]",
-        "Maintainer": "Joe Thorley <joe@poissonconsulting.ca>",
-        "Repository": "CRAN",
-        "Date/Publication": "2019-04-25 20:50:20 UTC",
-        "Built": "R 4.1.2; ; 2021-11-11 16:01:47 UTC; unix"
       }
     },
     "evaluate": {
@@ -1173,34 +1120,6 @@
         "Built": "R 4.1.2; x86_64-pc-linux-gnu; 2022-06-08 19:14:01 UTC; unix"
       }
     },
-    "markdown": {
-      "Source": "CRAN",
-      "Repository": "https://cran.rstudio.com/",
-      "description": {
-        "Package": "markdown",
-        "Type": "Package",
-        "Title": "Render Markdown with the C Library 'Sundown'",
-        "Version": "1.1",
-        "Authors@R": "c(\n   person(\"JJ\", \"Allaire\", role = \"aut\"),\n   person(\"Jeffrey\", \"Horner\", role = \"aut\"),\n   person(\"Yihui\", \"Xie\", role = c(\"aut\", \"cre\"), email = \"xie@yihui.name\", comment = c(ORCID = \"0000-0003-0645-5666\")),\n   person(\"Henrik\", \"Bengtsson\", role = \"ctb\"),\n   person(\"Jim\", \"Hester\", role = \"ctb\"),\n   person(\"Yixuan\", \"Qiu\", role = \"ctb\"),\n   person(\"Kohske\", \"Takahashi\", role = \"ctb\"),\n   person(\"Adam\", \"November\", role = \"ctb\"),\n   person(\"Nacho\", \"Caballero\", role = \"ctb\"),\n   person(\"Jeroen\", \"Ooms\", role = \"ctb\"),\n   person(\"Thomas\", \"Leeper\", role = \"ctb\"),\n   person(\"Joe\", \"Cheng\", role = \"ctb\"),\n   person(\"Andrzej\", \"Oles\", role = \"ctb\"),\n   person(\"Vicent\", \"Marti\", role = c(\"aut\", \"cph\"), comment = \"The Sundown library\"),\n   person(\"Natacha\", \"Porte\", role = c(\"aut\", \"cph\"), comment = \"The Sundown library\"),\n   person(family = \"RStudio\", role = \"cph\")\n   )",
-        "Description": "Provides R bindings to the 'Sundown' Markdown rendering library\n    (<https://github.com/vmg/sundown>). Markdown is a plain-text formatting\n    syntax that can be converted to 'XHTML' or other formats. See\n    <http://en.wikipedia.org/wiki/Markdown> for more information about Markdown.",
-        "Depends": "R (>= 2.11.1)",
-        "Imports": "utils, xfun, mime (>= 0.3)",
-        "Suggests": "knitr, RCurl",
-        "License": "GPL-2",
-        "URL": "https://github.com/rstudio/markdown",
-        "BugReports": "https://github.com/rstudio/markdown/issues",
-        "VignetteBuilder": "knitr",
-        "RoxygenNote": "6.1.1",
-        "Encoding": "UTF-8",
-        "NeedsCompilation": "yes",
-        "Packaged": "2019-08-07 15:59:28 UTC; yihui",
-        "Author": "JJ Allaire [aut],\n  Jeffrey Horner [aut],\n  Yihui Xie [aut, cre] (<https://orcid.org/0000-0003-0645-5666>),\n  Henrik Bengtsson [ctb],\n  Jim Hester [ctb],\n  Yixuan Qiu [ctb],\n  Kohske Takahashi [ctb],\n  Adam November [ctb],\n  Nacho Caballero [ctb],\n  Jeroen Ooms [ctb],\n  Thomas Leeper [ctb],\n  Joe Cheng [ctb],\n  Andrzej Oles [ctb],\n  Vicent Marti [aut, cph] (The Sundown library),\n  Natacha Porte [aut, cph] (The Sundown library),\n  RStudio [cph]",
-        "Maintainer": "Yihui Xie <xie@yihui.name>",
-        "Repository": "CRAN",
-        "Date/Publication": "2019-08-07 16:30:02 UTC",
-        "Built": "R 4.1.2; x86_64-pc-linux-gnu; 2021-11-11 19:05:29 UTC; unix"
-      }
-    },
     "memoise": {
       "Source": "CRAN",
       "Repository": "https://cran.rstudio.com/",
@@ -1291,7 +1210,7 @@
         "License": "MIT + file LICENSE",
         "URL": "https://pillar.r-lib.org/, https://github.com/r-lib/pillar",
         "BugReports": "https://github.com/r-lib/pillar/issues",
-        "Imports": "cli (>= 2.3.0), crayon (>= 1.3.4), ellipsis (>= 0.3.2), fansi,\nglue, lifecycle, rlang (>= 1.0.1), utf8 (>= 1.1.0), utils,\nvctrs (>= 0.3.8)",
+        "Imports": "cli (>= 2.3.0), crayon (>= 1.3.4), ellipsis (>= 0.3.2), fansi,\nglue, lifecycle, rlang (>= 0.3.0), utf8 (>= 1.1.0), utils,\nvctrs (>= 0.3.8)",
         "Suggests": "bit64, debugme, DiagrammeR, dplyr, formattable, ggplot2,\nknitr, lubridate, nanotime, nycflights13, palmerpenguins,\nrmarkdown, scales, stringi, survival, testthat (>= 3.1.1),\ntibble, units (>= 0.7.2), vdiffr, withr",
         "VignetteBuilder": "knitr",
         "Encoding": "UTF-8",
@@ -1529,7 +1448,7 @@
         "URL": "http://purrr.tidyverse.org, https://github.com/tidyverse/purrr",
         "BugReports": "https://github.com/tidyverse/purrr/issues",
         "Depends": "R (>= 3.2)",
-        "Imports": "magrittr (>= 1.5), rlang (>= 1.0.1)",
+        "Imports": "magrittr (>= 1.5), rlang (>= 0.3.1)",
         "Suggests": "covr, crayon, dplyr (>= 0.7.8), knitr, rmarkdown, testthat,\ntibble, tidyselect",
         "VignetteBuilder": "knitr",
         "Encoding": "UTF-8",
@@ -1650,6 +1569,33 @@
         "Repository": "CRAN",
         "Date/Publication": "2021-09-29 07:10:03 UTC",
         "Built": "R 4.1.2; ; 2021-11-11 16:01:56 UTC; unix"
+      }
+    },
+    "revealjs": {
+      "Source": "CRAN",
+      "Repository": "https://cran.rstudio.com/",
+      "description": {
+        "Package": "revealjs",
+        "Type": "Package",
+        "Title": "R Markdown Format for 'reveal.js' Presentations",
+        "Version": "0.9",
+        "Date": "2017-03-13",
+        "Authors@R": "c(\n    person(\"Hakim\", \"El Hattab\", role = c(\"aut\", \"cph\"),\n       comment = \"reveal.js-3.2.0, https://github.com/hakimel/reveal.js\"),\n    person(\"Asvin\", \"Goel\", role = c(\"ctb\", \"cph\"), email = \"goel@telematique.eu\",\n       comment = \"chalkboard plugin\"),\n    person(\"Greg\", \"Denehy\", role = c(\"ctb\", \"cph\"),\n       comment = \"menu plugin\"),\n    person(\"JJ\", \"Allaire\", role = c(\"aut\", \"cre\"), email = \"jj@rstudio.com\"),\n    person(family = \"RStudio\", role = \"cph\")\n  )",
+        "Description": "R Markdown format for 'reveal.js' presentations, a framework \n  for easily creating beautiful presentations using HTML.",
+        "License": "MIT + file LICENSE",
+        "URL": "https://github.com/rstudio/revealjs",
+        "BugReports": "https://github.com/rstudio/revealjs/issues",
+        "Depends": "R (>= 3.0)",
+        "Imports": "rmarkdown (>= 1.0)",
+        "Suggests": "testthat",
+        "RoxygenNote": "6.0.1",
+        "NeedsCompilation": "no",
+        "Packaged": "2017-03-13 15:00:56 UTC; jjallaire",
+        "Author": "Hakim El Hattab [aut, cph] (reveal.js-3.2.0,\n    https://github.com/hakimel/reveal.js),\n  Asvin Goel [ctb, cph] (chalkboard plugin),\n  Greg Denehy [ctb, cph] (menu plugin),\n  JJ Allaire [aut, cre],\n  RStudio [cph]",
+        "Maintainer": "JJ Allaire <jj@rstudio.com>",
+        "Repository": "CRAN",
+        "Date/Publication": "2017-03-13 17:11:07",
+        "Built": "R 4.1.2; ; 2021-11-11 16:17:59 UTC; unix"
       }
     },
     "rlang": {
@@ -1962,6 +1908,30 @@
         "Repository": "CRAN",
         "Date/Publication": "2021-10-02 04:30:02 UTC",
         "Built": "R 4.1.2; ; 2021-11-11 16:14:24 UTC; unix"
+      }
+    },
+    "shinydashboard": {
+      "Source": "CRAN",
+      "Repository": "https://cran.rstudio.com/",
+      "description": {
+        "Package": "shinydashboard",
+        "Title": "Create Dashboards with 'Shiny'",
+        "Version": "0.7.2",
+        "Authors@R": "c(\n    person(\"Winston\", \"Chang\", role = c(\"aut\", \"cre\"), email = \"winston@rstudio.com\"),\n    person(\"Barbara\", \"Borges Ribeiro\", role = \"aut\", email = \"barbara@rstudio.com\"),\n    person(family = \"RStudio\", role = \"cph\"),\n    person(family = \"Almasaeed Studio\", role = c(\"ctb\", \"cph\"), comment = \"AdminLTE theme for Bootstrap\"),\n    person(family = \"Adobe Systems Incorporated\", role = c(\"ctb\", \"cph\"), comment = \"Source Sans Pro font\")\n    )",
+        "Description": "Create dashboards with 'Shiny'. This package provides\n    a theme on top of 'Shiny', making it easy to create attractive dashboards.",
+        "URL": "http://rstudio.github.io/shinydashboard/",
+        "Depends": "R (>= 3.0)",
+        "License": "GPL (>= 2) | file LICENSE",
+        "Imports": "utils, shiny (>= 1.0.0), htmltools (>= 0.2.6), promises",
+        "BugReports": "https://github.com/rstudio/shinydashboard",
+        "RoxygenNote": "6.0.1.9000",
+        "NeedsCompilation": "no",
+        "Packaged": "2021-09-29 17:40:23 UTC; winston",
+        "Author": "Winston Chang [aut, cre],\n  Barbara Borges Ribeiro [aut],\n  RStudio [cph],\n  Almasaeed Studio [ctb, cph] (AdminLTE theme for Bootstrap),\n  Adobe Systems Incorporated [ctb, cph] (Source Sans Pro font)",
+        "Maintainer": "Winston Chang <winston@rstudio.com>",
+        "Repository": "CRAN",
+        "Date/Publication": "2021-09-30 12:10:06 UTC",
+        "Built": "R 4.1.2; ; 2021-11-11 16:18:01 UTC; unix"
       }
     },
     "shinythemes": {
@@ -2505,35 +2475,182 @@
     }
   },
   "files": {
-    "app.r": {
-      "checksum": "8b14e274d9305ee99e350647bdf5b3c5"
+    ".Rbuildignore": {
+      "checksum": "b448807b8fb2d44e049c8d54dc8b2074"
     },
-    "assignments.r": {
+    "app.r": {
+      "checksum": "021f987937c712af296c4ed1a3fe856a"
+    },
+    "DESCRIPTION": {
+      "checksum": "aa91614615be5bfbaf9569e7c1084489"
+    },
+    "inst/project-template/templates/init/_navbar.html": {
+      "checksum": "8a7ca2bf5274845fc869df7432905335"
+    },
+    "inst/project-template/templates/init/_site.yml": {
+      "checksum": "9cb5afe7631294fdd064b243296c5e71"
+    },
+    "inst/project-template/templates/init/courseR.yml": {
+      "checksum": "ca8c9386d699199cddb5e9b16f6ce94d"
+    },
+    "inst/project-template/templates/init/footer.html": {
+      "checksum": "9c5688c0f1aa2d6beae9cbd1a0877756"
+    },
+    "inst/project-template/templates/init/index.Rmd": {
+      "checksum": "3845cc1835e60ccb964a4948d4dc96f5"
+    },
+    "inst/project-template/templates/package/DESCRIPTION": {
+      "checksum": "5d617de03eaaa8b8cd5698ed478359b4"
+    },
+    "inst/project-template/templates/package/NAMESPACE": {
+      "checksum": "f4952a5a758aaeaa98846f193e878264"
+    },
+    "inst/project-template/templates/package/R/course.R": {
+      "checksum": "3af2d76563e8f05bfce691a1597a821d"
+    },
+    "inst/project-template/templates/scripts/addusers.sh": {
+      "checksum": "f5479c2f9f567fad77d383b0f385438c"
+    },
+    "inst/project-template/templates/scripts/setpasswd.sh": {
+      "checksum": "286f0a761b354fb3d787014f393cb6d3"
+    },
+    "inst/project-template/templates/scripts/user-list.txt": {
+      "checksum": "e7de2086aad73f248e8b4c7918989d7a"
+    },
+    "inst/project-template/templates/site/assignment-solution.Rmd": {
+      "checksum": "74ffb0043b04a1d93d8647bdad65fe09"
+    },
+    "inst/project-template/templates/site/assignment-tasks.Rmd": {
+      "checksum": "febdf97cf0f30f2f2d6d0f66f5d06532"
+    },
+    "inst/project-template/templates/site/assignment.Rmd": {
+      "checksum": "414b7189d236709ea26462190ec98cfe"
+    },
+    "inst/project-template/templates/site/content-page.Rmd": {
+      "checksum": "78df6c7d8701a87a3e7c1723fd7de25d"
+    },
+    "inst/project-template/templates/site/content-slides.Rmd": {
+      "checksum": "a5a429d2c0be2a4591292bb94768db18"
+    },
+    "inst/project-template/templates/site/content.Rmd": {
+      "checksum": "9acde721483752b1156970127cacd42c"
+    },
+    "inst/project-template/templates/site/includes.html": {
+      "checksum": "66332327eae3d6e83c1389e0ade873b3"
+    },
+    "inst/project-template/templates/site/partials/nav-dropdown-li.html": {
+      "checksum": "06687883b62a7690d71905a308707764"
+    },
+    "inst/project-template/templates/site/projects-page.Rmd": {
+      "checksum": "3f4244901671e8f9045ee8f28d139652"
+    },
+    "inst/project-template/templates/site/table.html": {
+      "checksum": "cb081c7a108e3643aff539f342766092"
+    },
+    "man/assignment.Rd": {
+      "checksum": "5fd32d2c17a70243e7704c58153bc32a"
+    },
+    "man/build.Rd": {
+      "checksum": "87189a25200758b47277a21980aa8cfc"
+    },
+    "man/check_cols.Rd": {
+      "checksum": "cbdb675722460a963139268e73fe9329"
+    },
+    "man/check_final.Rd": {
+      "checksum": "eb25de2f08bed44e490281ac219db450"
+    },
+    "man/check_rows.Rd": {
+      "checksum": "c27277559363704e497140d761f39387"
+    },
+    "man/checkAssignment.Rd": {
+      "checksum": "d363be8a87f02cc13ad525901bb87e15"
+    },
+    "man/checkAssignments.Rd": {
+      "checksum": "ad175e31d0de058eac73af90bd64f3df"
+    },
+    "man/clean.Rd": {
+      "checksum": "273a5a05dd7d02000743444cf5a3ac10"
+    },
+    "man/copyErrorLogs.Rd": {
+      "checksum": "4fdafacbdea38ab9d6b5b3a05281dfc0"
+    },
+    "man/createTable.Rd": {
+      "checksum": "02c266c96d4e04485676ec008bce6442"
+    },
+    "man/includeTable.Rd": {
+      "checksum": "f8df5a36390c6a824644e78f274dfe75"
+    },
+    "man/init.Rd": {
+      "checksum": "72c47922149b3be6d5c111c04721774b"
+    },
+    "man/listAssignments.Rd": {
+      "checksum": "fa90ba0ec3cecd43633c172e367ac003"
+    },
+    "man/newAssignment.Rd": {
+      "checksum": "44b967bc8947fe9a32743a81cd26e881"
+    },
+    "man/newContent.Rd": {
+      "checksum": "4f75ff1c12145b86409e28d887f7182e"
+    },
+    "man/publish.Rd": {
+      "checksum": "eefd246167eb52038ee5999842bea366"
+    },
+    "man/publishApp.Rd": {
+      "checksum": "4ba68738639d9a755029843223d2f02e"
+    },
+    "man/solution.Rd": {
+      "checksum": "9e5d6dc51073eb8f70c41475491d63ef"
+    },
+    "man/startAssignment.Rd": {
+      "checksum": "523ac42f7c15c7003f0fc0c0c660733a"
+    },
+    "man/submitAssignment.Rd": {
+      "checksum": "a4b641833a5a752255975881265f25f9"
+    },
+    "man/website.Rd": {
+      "checksum": "0608fe0f8b9a9d7f80bab8775d15b3c6"
+    },
+    "NAMESPACE": {
+      "checksum": "1bb269a7e429977865c94b742b33d23e"
+    },
+    "R/.gitignore": {
+      "checksum": "a2d4e4ffea052bf260c4a00fd225f1d6"
+    },
+    "R/assignments.r": {
       "checksum": "b569cd2f7e15ba194819aa7e3a473b86"
     },
-    "build.r": {
+    "R/build.r": {
       "checksum": "782854026606ee48ee554f145288d163"
     },
-    "courseR.r": {
-      "checksum": "51b3844173a7520d0273f69a2ef63087"
+    "R/courseR.r": {
+      "checksum": "40a3f8c36d3a27f81769251d13af8e8f"
     },
-    "grading.r": {
+    "R/grading.r": {
       "checksum": "308d235c527bd11552cf69382d154e6d"
     },
-    "instructor-UI.r": {
+    "R/instructor-UI.r": {
       "checksum": "f56ed5f0d09a37595d432599eafc7e1d"
     },
-    "package.r": {
+    "R/package.r": {
       "checksum": "366094ba3f5a0642ffcd3df3505660e3"
     },
-    "student-UI.r": {
+    "R/student-UI.r": {
       "checksum": "ab8815a4fb359365a0fe1ef120a74ac1"
     },
-    "table.r": {
+    "R/table.r": {
       "checksum": "e75fefbc223ba48ac7acfe64591a6925"
     },
-    "utils.r": {
+    "R/utils.r": {
       "checksum": "43a8699cd573385076fc373e062e4f06"
+    },
+    "README.md": {
+      "checksum": "6aee3e47386485fd43cd76adce767e20"
+    },
+    "tests/testthat.R": {
+      "checksum": "9e188c943d68d297663323f2b89ab406"
+    },
+    "tests/testthat/test-end-to-end.R": {
+      "checksum": "07c2e4ff44fa925a3c53467121bfb3d7"
     }
   },
   "users": null
